# C-Console-Template

./: .clang-format  .gitattributes  README.md  meson.build  meson_options.txt
completion/: meson.build
completion/bash/: TEMPLATE.bash
completions/: meson.build
completions/bash/: TEMPLATE.bash
completions/fish/: TEMPLATE.fish  a.out.fish
completions/zsh/: _TEMPLATE
doc/: TEMPLATE.1.scd
man/: TEMPLATE.1.scd  meson.build
src/: main.c  meson.build
test/: meson.build
