option('bash-completions', type: 'boolean', value: true, description: 'Install bash shell completions')
option('fish-completions', type: 'boolean', value: true, description: 'Install fish shell completions')
option('zsh-completions', type: 'boolean', value: true, description: 'Install zsh shell completions')
option('man-pages', type: 'boolean', value: true, description: 'Generate and install man pages')